network-security-policies/examples/allow-all-namespace.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      {}
  egress:
  - toEndpoints
    - {}
  ingress:
  - fromEndpoints
    - {}
