network-security-policies/examples/deny-all-namespace.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      {}
  egress:
  - {}
  ingress:
  - {}
