network-security-policies/examples/dns-fqdn.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "to-fqdn"
  namespace: "tblshoot"
spec:
  endpointSelector:
    matchLabels:
      app: tblshoot
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "google.fr"
  ingress:
  - fromEndpoints:
    - {}
